--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,14 +2,7 @@
 sitemap: false
 ---
 
-/*
- *
- *  Moon
- *
- *  Designer: Taylan Tatlı
- *  WEB: http://taylantatli.me
- *
-*/
+
 
 // Partials
 @import "variables";
@@ -24,4 +17,4 @@ sitemap: false
 @import "vendor/font-awesome";
 @import "vendor/animate";
 @import "vendor/magnific-popup/magnific-popup";
-@import "print"
+@import "print";
